tests/spec/compile-fail/115_block_on_requires_move_task.zn
// category: compile-fail
// profile: hosted
// purpose: blockOn consumes the task handle and requires call-site move for named tasks

module tests.fail.blockOnRequiresMoveTask;

async fn workAsync() -> Result<Unit, WorkError> {
    return work();
}

fn bad() -> Result<Unit, WorkError> {
    var runtime = try Runtime.withWorkerCount(8);
    val task = try runtime.spawn(workAsync());

    try mut runtime.blockOn(task); // expected-error: blockOn consumes the task handle; use move task
    return Ok(());
}
